[project]
name = "GayBra_Fish"
version = "0.1.0"
description = "GayBra Fish Project setup for my poor sad friend, Edwin. "
dependencies = [
    "groundingdino-py>=0.4.0",
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pycocotools>=2.0.6",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "gradio==3.39.0",
    "gdown>=5.0.0",
    "ffmpeg>=1.4",
    "filterpy",
    "segment-anything-py>=1.0.1",
    "pytorch-extension>=0.2",
    "setuptools>=78.1.0",
    "spatial-correlation-sampler"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
